Update and rename roq.html to devil.html

--- a/devil.html
+++ b/devil.html
@@ -148,7 +148,7 @@
   
       <div class="hacked-message">
               <p>Hacked by <span style="color: red;">ABoROUQi</span></p>
-          <p>بنعالات الروقه وأخص فيها ألاساعده !</p>
+          <p>بنعالات ال ونيس !</p>
           <p>Discord.gg/JIL</p>
       </div>
   
@@ -202,7 +202,7 @@
   
       <div class="video-bg">
           <video autoplay muted loop>
-              <source src="https://c.top4top.io/m_3283u4srf1.mp4" type="video/mp4">
+              <source src="https://a.top4top.io/m_32859es651.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
       </div>
@@ -210,7 +210,7 @@
   <!DOCTYPE html>
   
       <audio autoplay loop>
-          <source src="https://audio.jukehost.co.uk/QulBHWTSuUUl9vl92AW86AgZl4FHUDKy" type="audio/mpeg">
+          <source src="https://audio.jukehost.co.uk/kjtus1VguMU1e0AxIwmOmLzatwFtyfJD" type="audio/mpeg">
           Your browser does not support the audio element.
       </audio>
   
