--- a/69.html
+++ b/69.html
@@ -202,7 +202,7 @@
   
       <div class="video-bg">
           <video autoplay muted loop>
-              <source src="https://a.top4top.io/m_32859es651.mp4" type="video/mp4">
+              <source src="https://i.top4top.io/m_3243zidf01.mov" type="video/mp4">
               Your browser does not support the video tag.
           </video>
       </div>
@@ -210,7 +210,7 @@
   <!DOCTYPE html>
   
       <audio autoplay loop>
-          <source src="https://audio.jukehost.co.uk/kjtus1VguMU1e0AxIwmOmLzatwFtyfJD" type="audio/mpeg">
+          <source src="https://audio.jukehost.co.uk/5vlKJX8Q0vxc3vTxevG0iPvv4sU2pEda" type="audio/mpeg">
           Your browser does not support the audio element.
       </audio>
   
