--- a/69.html
+++ b/69.html
@@ -148,7 +148,7 @@
   
       <div class="hacked-message">
               <p>Hacked by <span style="color: red;">ABoROUQi</span></p>
-          <p>بنعالات ال ونيس !</p>
+          <p>ابو روقي حضر ياهوه !</p>
           <p>Discord.gg/JIL</p>
       </div>
   
